--- a/MCMenus-API/src/main/resources/plugin.yml
+++ b/MCMenus-API/src/main/resources/plugin.yml
@@ -2,3 +2,4 @@ name: MCMenus-API
 version: ${project.version}
 main: ru.armagidon.mcmenusapi.MCMenusAPI
 api-version: 1.16
+softdepend: [PlaceholderAPI]
