--- a/MCMenus-TestPlugin/pom.xml
+++ b/MCMenus-TestPlugin/pom.xml
@@ -43,6 +43,11 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <artifactSet>
+                                <includes>
+                                    <include>ru.armagidon:MCMenus-API</include>
+                                </includes>
+                            </artifactSet>
                         </configuration>
                     </execution>
                 </executions>
@@ -78,7 +83,7 @@
             <groupId>ru.armagidon</groupId>
             <artifactId>MCMenus-API</artifactId>
             <version>1.0</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
