Added placeholder processing to menu elements

--- a/MCMenus-TestPlugin/src/main/resources/plugin.yml
+++ b/MCMenus-TestPlugin/src/main/resources/plugin.yml
@@ -2,7 +2,6 @@ name: MCMenusTestPlugin
 version: ${project.version}
 main: ru.armagidon.mcmenustestplugin.MCMenusTestPlugin
 api-version: 1.16
-softdepend:
-  - MCMenus-API
+softdepend: [PlaceholderAPI]
 commands:
   testmenu:
